# manman

./: .gitignore  .readthedocs.yml  Dockerfile  Makefile  README.md  ROADMAP.md  app.yaml  pyproject.toml  secret-values.yaml
docs/: conf.py  index.rst  main.md
src/: app.py  config.py  core.py  exceptions.py  types.py
src/routes/: dockerfiles.py  manifests.py  secrets.py  system.py
src/templates/_default/: affinity.yaml  server_hpa.yaml.jinja  tolerations.yaml
src/templates/ml/python/: dockerfile.jinja  server.yaml.jinja
src/templates/search/: dockerfile.jinja  server.yaml.jinja
src/utils/: encrypter.py  vault.py
templates/_default/: dockerfile.jinja2  migration.yaml.jinja2  server_hpa.yaml.jinja2
templates_copy_local/_default/: consumer.yaml.jinja2  cronjob.yaml.jinja2  server.yaml.jinja2
tests/: conftest.py
tests/routes/: conftest.py  test_dockerfile.py  test_system.py
