[project]
name = "manman"
version = "0.1.0"
description = "Manman is a simple and fast web server for dockerfiles and k8s manifests generation."
authors = [
    { name = "Bogdan", email = "evstrat.bg@gmail.com" }
]
dependencies = [
    "litestar[standart]>=2.10.0",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.4",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "orjson>=3.10.7",
    "uvicorn>=0.30.5",
    "cryptography>=43.0.0",
    "httpx>=0.27.0",
    "croniter>=3.0.3",
]
readme = "README.md"
LICENSE = "MIT"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/manman"]
